# django-taggit-machinetags

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Pipfile  README.rst  requirements.txt  run_tests.sh  runtests.py  setup.cfg  setup.py  tox.ini
taggit_machinetags/: __init__.py  fields.py  managers.py  models.py  tests.py
taggit_machinetags/migrations/: 0001_initial.py  0002_auto_20201012_1308.py
taggit_machinetags/south_migrations/: 0001_initial.py
test_project/: settings.py  urls.py
test_project/test_app/: models.py
