[wheel]
universal = 1

[metadata]
name = django-taggit-machinetags
version = attr: taggit_machinetags.__version__
description = Machine tagging built upon django-taggit
long_description = file: README.rst
license = BSD
author = Luke Pomfrey
author_email = django-taggitmachinetags@lukepomfrey.org
maintainer = Luke Pomfrey
maintainer_email = django-taggitmachinetags@lukepomfrey.org
url = http://github.com/lpomfrey/django-taggit-machinetags
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools;wheel;pip;pip-tools
python_requires = >=3.6
install_requires =
    django-taggit>=0.12
tests_require =
    mock

[options.packages.find]
excude = test_project

[flake8]
max-line-length = 88
ignore = E203, E501, W503

[pycodestyle]
max-line-length = 88
ignore = E203, E501, W503
